--- a/views/widget/contacts/contacts.html
+++ b/views/widget/contacts/contacts.html
@@ -4,7 +4,7 @@
   <div class="contact">
     <h2><i class="iconfont contactcs" style="color: #C13232;font-size:14px;">&#xe674;</i>{{ val.title | shorten(14) }}</h2>
     <p class="contactpp"><i class="iconfont contactp1" style="color: #C13232;font-size:14px;">&#xe6c7;</i>客服服务专线:{{ val.contact_number }}</p>
-    <i class="iconfont contactp2" style="color: #C13232;font-size:14px;">&#xe603;</i><div class="contacting"><p><i class="contactingcc">{{ val.address }}</i><span class="contact-vv">点击查看位置</span></p></div>
+    <i class="iconfont contactp2" style="color: #C13232;font-size:14px;">&#xe603;</i><div class="contacting"><p><i class="contactingcc">{{ val.address }}</i><span class="contact-vv" style="cursor: pointer;">点击查看位置</span></p></div>
     <div class="contacts-ing" style="display: none">{{ val.longitude }}</div>
     <div class="contacts-con" style="display: none">{{ val.dimension }}</div>
   </div>
