--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -44,12 +44,12 @@
 					{% if item.uid != null %}
 					<li>
 						<div class="gw-people">
-							<a href="{{helper.articleUrlgen('blog',item.uid | string)}}" style="display:inline-block;">
+							<a href="{{helper.urlgen(item.uid | string)}}" style="display:inline-block;">
 								<img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt="">
 							</a>
 							<span class="pepple-icon">{{item.user_info.realname}}<i></i></span>
 						</div>
-						<a href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
+						<a href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}">
 							<div class="gw-legend gw-news">留学时讯</div>
 							<p style="clear:both">{{ item.title | ellipsis(13) }}</p>
 						</a>
@@ -64,12 +64,12 @@
 							{% if item.uid != null %}
 							<li class="gw-newslist">
 								<div class="gw-people">
-									<a href="{{helper.articleUrlgen('blog',item.uid|string)}}">
+									<a href="{{helper.urlgen(item.uid|string)}}">
 										<img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt="">
 									</a>
 									<span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>
 								</div>
-								<a href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
+								<a href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}">
 									<div class="gw-legend">{{item.tag_list}}</div>
 									<p style="clear:both">{{item.title | ellipsis(13)}}</p>
 								</a>
