--- a/views/widget2/bottom_comment/bottom_comment_zhuanlan.html
+++ b/views/widget2/bottom_comment/bottom_comment_zhuanlan.html
@@ -9,7 +9,7 @@
       <i class="iconfont " id="shoucang_{{item.id}}">&#xe7ed;</i>
       <span id="shoucang_span_{{item.id}}">收藏（<em id="shoucang_em_{{item.id}}">{{item.favorites}}</em>）</span>
     </li>
-    <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
+    <a target="_blank" href="{{helper.urlgen('advisor_center/article',item.id | string) if item.type == 1 else helper.urlgen('advisor_center/case',item.id | string)}}">
     <li onclick="showbottom(3, {{item.id}}, {{userinfo.usertype}})" id="pinglun_li_{{item.id}}">
       <i class="iconfont " id="pinglun_{{item.id}}" style="color: #666">&#xe61f;</i>
       <span id="pinglun_span_{{item.id}}">评论（<em id="pinglun_em_{{item.id}}">{{item.comments}}</em>）</span>
