--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -176,7 +176,7 @@
     var aItemHtml = '<div class="homepage">' +
         '<div class="homepagecon">' +
         '<a target="_blank"  href="' + fn.urlgen("blog", aitem.uid.toString()) + '" >'+
-        '<div class="homepageing" style="background:url(' + fn.avaterimg(aitem.uid, 'small', aitem.user_info.status, aitem.user_info.version) + ') no-repeat 0 0;background-size: 50px 50px;"></div>' +
+        '<div class="homepageing" style="background:url(' + fn.avaterimg(aitem.uid, 'small', aitem.user_info.status, aitem.user_info.version) + ') no-repeat 0 0;background-size: cover;"></div>' +
         '<h3>' + aitem.user_info.realname + '<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>' +
         '</a>'+
         '<ul>' +
