--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -84,7 +84,7 @@
 </script>
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_zhuye.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
@@ -264,12 +264,23 @@
         '<li onclick="showbottom(2, ' + item.id + ')" id="shoucang_li_' + item.id + '">' +
         '<i class="iconfont " id="shoucang_' + item.id + '">&#xe7ed;</i>' +
         '<span id="shoucang_span_' + item.id + '">收藏<em id="shoucang_em_' + item.id + '">' + item.favorites + '</em></span>' +
-        '</li>' +
-        '<li onclick="showbottom(3, ' + item.id + ')" id="pinglun_li_' + item.id + '">' +
-        '<i class="iconfont " id="pinglun_' + item.id + '">&#xe61f;</i>' +
-        '<span id="pinglun_span_' + item.id + '">评论<em id="pinglun_em_' + item.id + '">' + item.comments + '</em></span>' +
-        '</li>' +
-        '<li class="dian" onclick="showbottom(4, ' + item.id + ')" id="dianzan_li_' + item.id + '">' +
+        '</li>' ;
+        if (item.type == 2){
+        html += '<a target="_blank" href="' + fn.urlgen("article", item.id.toString()) + '">'+
+        '<li onclick="" id="pinglun_li_'+item.id+'">'+
+        '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
+        '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
+        '</li>'+
+        '</a>';
+        } else {
+        html += '<a target="_blank" href="' + fn.urlgen("case", item.id.toString()) + '">'+
+        '<li onclick="" id="pinglun_li_'+item.id+'">'+
+        '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
+        '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
+        '</li>'+
+        '</a>';
+    }
+        html += '<li class="dian" onclick="showbottom(4, ' + item.id + ')" id="dianzan_li_' + item.id + '">' +
         '<i class="iconfont " id="dianzan_' + item.id + '">&#xe651;</i>' +
         '<span id="dianzan_span_' + item.id + '">点赞<em id="dianzan_em_' + item.id + '">' + item.votes + '</em></span>' +
         '</li>' +
