--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -147,7 +147,7 @@
 
     <div class="content_title_bbb clearfix">
       <span>个 人 介 绍： </span>
-      <textarea id="gerenjieshao" maxlength="500"></textarea>
+      <textarea id="gerenjieshao" maxlength="500" data-geren="{{userinfo.introduce}}"></textarea>
       <div class="word-num">还可以输入<span id="word-num">500</span>字</div>
     </div>
 
@@ -194,19 +194,21 @@
           pagination: true
       });
     $("#gerenjieshao").on("change",function(){
-      this.value = this.value.substring(0, 500);
+      this.value = this.value.substring(0, 80);
     });
     $("#gerenjieshao").on("keydown",function(){
-      this.value  = this.value.substring(0, 500);
+      this.value  = this.value.substring(0, 80);
     });
     $("#gerenjieshao").on("keyup",function(){
       var strLength = $.trim($(this).val()).length;
-      $("#word-num").html(500-strLength);
-      if(strLength > 500){
+      $("#word-num").html(80-strLength);
+      if(strLength > 80){
         $("#word-num").html(0);
-        this.value  = this.value.substring(0, 500);
+        this.value  = this.value.substring(0, 80);
       }
     });
+    var geren = $('#gerenjieshao').data('geren');
+    $('#gerenjieshao').html(geren);
   });
   function baocunSubmit () {
     $.ajax({
