--- a/views/index.html
+++ b/views/index.html
@@ -378,7 +378,7 @@
         e.preventDefault();
       }
       $.cookie('currentarea', currentarea, { path: "/",domain: '.jjlvip.cn'});
-      window.location.href= fn.urlgen('branch_home','c=' + currentarea);
+      window.location.href = $(this).attr("href");
 
     });
     //正确
