--- a/views/release_article.html
+++ b/views/release_article.html
@@ -457,7 +457,13 @@
             	layer.msg('发布成功')
               if(login_ss.usertype == 2){
                 window.setTimeout(function(){
-                  window.open(fn.articleUrlgen('blog',login_ss.uid.toString(),'article='+result.data.article_id.toString()));
+                    if(result.data.type == 1){
+                        window.open(fn.urlgen('case',result.data.article_id.toString()));
+                    }else {
+                        window.open(fn.urlgen('article',result.data.article_id.toString()));
+                    }
+
+
                 },1000);
               }
             }else if(result.code == '1210000011'){
