--- a/views/user_information.html
+++ b/views/user_information.html
@@ -132,7 +132,7 @@
         </div>
 
 
-        <input type="button" style="border:none;font-size: 14px;color: #fff;width: 80px;height: 30px;float: right;background: #C13232;color: #fff;text-align: center;line-height: 30px;" id="baocunSubmit" value="确定保存"/>
+        <input type="button" style="border:none;font-size: 14px;color: #fff;width: 80px;height: 30px;float: right;background: #C13232;color: #fff;text-align: center;line-height: 30px;margin-bottom: 20px;" id="baocunSubmit" value="确定保存"/>
 
       </form>
     </div>
