--- a/views/widget/xSlider/xSlider.html
+++ b/views/widget/xSlider/xSlider.html
@@ -1,3 +1,15 @@
+{% if xSlider.length ==1 %}
+<style>
+  .slider:hover .slider-btn{
+    display: none;
+  }
+</style>
+<div class="slider">
+  <a href="{{xSlider[0].linkurl}}" data-pid="{{xSlider[0].pid}}" target="_blank" >
+    <img src="{{xSlider[0].imageurl}}" alt="{{xSlider[0].alt}}" style="width: 100%;height: 100%;">
+  </a>
+</div>
+{% else%}
 <div class="slider">
         <div class="slider-img">
               <ul class="slider-img-ul">
@@ -26,3 +38,4 @@
         </div>     
 </div>
 
+{%endif%}
