--- a/views/widget2/guess_like/guess_like.css
+++ b/views/widget2/guess_like/guess_like.css
@@ -1,14 +1,14 @@
 
-.gw-likelist{width:280px;list-style:none;padding-bottom: 10px;}
-.gw-likelist li{margin-top:20px;border-bottom:solid 1px #dcdcdc;margin-left: 10px;margin-right: 10px;}
+.gw-likelist{width:280px;list-style:none;padding-bottom: 10px;background: #fff;}
+.gw-likelist li{padding-top:14px;border-bottom:solid 1px #dcdcdc;margin-left: 10px;margin-right: 10px;}
 /* .gw-likelist li:first-child{margin-top:0} */
 .gw-likelist a{color:#333;text-decoration:none;}
 .likes-item{overflow:hidden}
 .likes-item span{display:inline-block;margin-top:18px}
 .likes-item+.article{margin:8px 0 10px;color:#333;font-size:16px}
 .likes-item img{float:left;width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
-.gw-list .people-action,.likes-item .people-action{width:80px;height:24px;-webkit-border-radius:8px;border-radius:8px;background:#fdf3f2;color:#c13232;text-align:center;font-size:12px;line-height:24px}
-.gw-list .people-name,.likes-item .people-name{margin-right:64px;margin-left:10px;padding-right:20px;background:url(/assets/img/1v.png) no-repeat;background-position:right center;font-size:14px}
+.likes-item .people-action{width:80px;height:24px;-webkit-border-radius:8px;border-radius:8px;background:#fdf3f2;color:#c13232;text-align:center;font-size:12px;line-height:24px}
+.likes-item .people-name{margin-right:34px;margin-left:10px;padding-right:20px;background:url(/assets/img/1v.png) no-repeat;background-position:right center;font-size:14px}
 .likeItem{width: 280px;border:solid 1px #dbdbdb;}
 .likeItem > h2{height: 50px;line-height: 50px;font-size: 18px;color: #333;background: #f3f3f3;}
 .likeItem > h2 > em{
